src/test/resources/org/nest/nestml/_cocos/valid/neuronWithMultipleOrNoUpdate.nestml
neuron neuronWithMultipleOrNoUpdate:
  update:
  end
end