src/test/resources/org/nest/nestml/_cocos/invalid/neuronWithMultipleOrNoUpdate.nestml
neuron neuronWithNoUpdate:

end

neuron neuronWithMultipleUpdates:
  update:
  end

  update:
  end

end